Fix story header image not being stretched to full height

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,4 +37,8 @@
     .svg-icon {
         @apply w-6 h-6;
     }
+
+    .image-full-height {
+        @apply h-full;
+    }
 }
